--- a/jd20190111.html
+++ b/jd20190111.html
@@ -1,4 +1,3 @@
-
 <html xmlns:v="urn:schemas-microsoft-com:vml"
 xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:w="urn:schemas-microsoft-com:office:word"
@@ -20,7 +19,7 @@ w\:* {behavior:url(#default#VML);}
 .shape {behavior:url(#default#VML);}
 </style>
 <![endif]-->
-<title>★★★ 1月11日京豆更新-200+京豆直接扫★★★ - 扒羊毛</title>
+<title>★★★ 京豆★★★</title>
 <!--[if gte mso 9]><xml>
  <o:DocumentProperties>
   <o:Author>n</o:Author>
